# flaek-magicblock

./: .env.example  .gitignore  .prettierignore  README.md
contracts/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
contracts/programs/flaek_mb/: Cargo.toml
contracts/programs/flaek_mb/src/: lib.rs
contracts/tests/: flaek.test.ts
flaek-client/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
flaek-client/src/: app.tsx  index.css  main.tsx
flaek-client/src/components/: background-grid.tsx  brand-logo.tsx  button.tsx  section-divider.tsx
flaek-client/src/lib/: api.ts  auth.ts  flaek-sdk.ts  magicblock.ts  router.ts  validation.ts
flaek-client/src/pages/: docs.tsx  forgot-password.tsx  get-started.tsx  reset-password.tsx  signin.tsx
flaek-client/src/sections/: benefits-panel.tsx  blocks-showcase.tsx  cta.tsx  footer.tsx  global-compliance.tsx  hero.tsx  how-it-works.tsx  learn-more.tsx  navbar.tsx
flaek-server/: .dockerignore  .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
flaek-server/src/: app.ts  routes.ts  server.ts
flaek-server/src/clients/: solana-client.ts
flaek-server/src/config/: env.ts  logger.ts
flaek-server/src/db/: mongo.ts  redis.ts
flaek-server/src/middlewares/: api-key-auth.ts  error-handler.ts  idempotency.ts  jwt-auth.ts  not-found-handler.ts  publishable-key-auth.ts  rate-limiter.ts  require-role.ts  schema-validator.ts  unified-auth.ts
flaek-server/src/shared/: constants.ts  errors.ts  index.ts  roles.ts
flaek-server/src/storage/: object-store.ts
(+95 files in other folders)
