[package]
name = "flaek_mb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "=0.8.0", features = ["anchor", "access-control"] }
